	Town and nation banks get moved when renaming.
	Rewrote block permissions to cache the status of the current TownBlock (Wilderness, WarZone, etc).
	Ignore protection in wilderness for particular blocks. (unclaimed_zone_ignore)
	Automatically change config if an optional plugin isn't installed.
	Town assistants can now set plots for sale.
	During war. The death of a mayor or king will remove the town/nation from war.
	Defeating a townblock during war will give your town +1 bonus, and the enemy town -1 bonus.
	Resident perms load on boot now.
	Added command "/towny top" to show a few highscore lists.
	Added permission:
		towny.spawntp (To let a player use /town spawn [town] even when ALLOW_TOWN_SPAWN_TRAVEL=false)
v0.19:
	Forgot to override with build and switch for wild ignore blocks.
	Moved all timers to Bukkits Scheduler.
	Bug fixes for war.
v0.20:
	Quick fix for town notifications.
v0.21:
	Resident permissions are persistent.
	Added add+/remove+ to select offline residents.
v0.22:
	Nation server upkeep is now taken. 
	Added command /townyworld (/tw) to manage worlds.
	You can now set world PvP, and if a world is claimable.
	The slightly spammy messages during war have been filtered to show every 10 damage. They can be viewed with the modes "wardef" and "waratk".
	Added modes "tc" and "nc" to talk in a particular chat without typing /tc [msg], etc.
	Created Long config values. "Deleted after time" was overflowing int.
	Added to world options, isDefault (use default settings in config), as well as per world permissions, ignore ids, and unclaimed zone names.
	Fixed MobRemoval.
	Moved some help commands around.
v0.23:
	Updated Essentials extensibility to use the proper plugin.
	Added option to disable removing a town/nation on monarch death.
	
TODO:	
	
	Ability to convert from hMod database. Not really recommended.
	Ability to make NPC Residents profiles (not actual human entities). /townyadmin set mayor [town] npc